# teta_ml_2025

ml_hw3/: homework.ipynb
teta_ml_1_2025_fraud/: baseline.ipynb  final_solution.ipynb  test.py
teta_ml_2_2025_rental_occupancy/: final_solution.ipynb
teta_nn_1_2025_predict_salary/: .gitignore  main.py  pyproject.toml
teta_nn_1_2025_predict_salary/notebooks/: baseline.ipynb  companies.json  eda.ipynb  industries.json  temp.ipynb
teta_nn_1_2025_predict_salary/src/tools/: experiment_tracker.py
